--- a/style.css
+++ b/style.css
@@ -29,6 +29,10 @@ body{
     font-size: 15px;
     padding:15px 30px;
 }
+.btn-1:hover{
+  color:rgb(245, 83, 24);
+  background-color: rgba(128, 128, 128, 0.705);
+}
 /* main section */
 .m-section{
     display: flex;
@@ -126,6 +130,10 @@ body{
     font-weight: 800;
     border-radius: 6px;
   } 
+  .btn-2:hover{
+    background-color:coral ;
+    color:white;
+  }
   /* footer section */
   footer{
     background-color: black;
